# relay_controllers_hub

./: .gitignore  Cargo.toml  LICENSE  commands.txt  memory.x
cross/.cargo/: config.toml
cross/app/: Cargo.toml  openocd.gdb
cross/app/src/: handlers.rs  main.rs
cross/board/: Cargo.toml
cross/board/src/: custom_interrupt_class.rs  lib.rs
cross/self-tests/: Cargo.toml
cross/self-tests/tests/: native_board_tests.rs
drivers/: Cargo.toml
drivers/src/: implementations.rs  lib.rs  services.rs
drivers/src/implementations/: rtc.rs  serial.rs
drivers/src/services/: adc_transfer.rs
host-target-tests/: Cargo.toml
host-target-tests/tests/: serial.rs
logic/: Cargo.toml
logic/src/: errors.rs  hal_ext.rs  implementations.rs  lib.rs  services.rs  test_mocks.rs  utils.rs
logic/src/hal_ext/: rtc_wrapper.rs  serial_transfer.rs
logic/src/implementations/: rtc.rs  serial.rs
logic/src/services/: led.rs  slave_controller_link.rs
logic/src/services/slave_controller_link/: domain.rs  parsers.rs  receiver_from_slave.rs  requests_controller.rs  signals_controller.rs  signals_handler_proxy.rs  transmitter_to_slave.rs
logic/src/utils/: dma_read_buffer.rs  write_to.rs
src/: app_logic.rs  errors.rs  hal_ext.rs  lib.rs  main.rs  utils.rs
src/app_logic/: led.rs  slave_controller_link.rs
src/app_logic/slave_controller_link/: domain.rs
src/hal_ext/: dma_read_buffer.rs  dma_stream_ext.rs  rtc_wrapper.rs  serial_transfer.rs
xtask/: Cargo.toml
