[package]
authors = ["Valerii Timakov <valtimakov@gmail.com>"]
edition = "2018"
name = "logic"
version = "0.1.0"

[dependencies]
serde = { version = "1.0.123", default-features = false }
serde_derive = "1.0.123"
embedded-dma = "0.2.0"
stm32f4xx-hal = { version = "0.16.0", features = ["rt", "stm32f401"], path = "../../stm32f4xx-hal" }
embedded-hal = "0.2.4"
crc-any = { version = "2.3.5", default-features = false }
defmt = "0.3.5"
cortex-m = "0.7.7"
time-core = "0.1.1"
time = { version = "0.3.22", default-features = false }
cortex-m-semihosting = "0.5.0"
embedded-alloc = "0.5.0"

[dev-dependencies]
postcard = { version = "0.5.2", features = ["alloc"] }
quickcheck = "1"
quickcheck_macros = "1"
embedded-hal-mock = "0.9.0"
rand = "0.8.5"


