[package]
authors = ["Valerii Timakov <valtimakov@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "relay-controllers-hub"
version = "0.1.0"

[dependencies]
board = { path = "../board" }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
nb = "1.1.0"
stm32f4xx-hal = { version = "0.16.0", features = ["rt", "stm32f401"] }
cortex-m-rtic = "1.0.0"
rtt-target = { version = "0.4.0" }
dwt-systick-monotonic = "1.1.0"
time = { version = "0.3.22", default-features = false }
time-core = "0.1.1"
embedded-storage = "0.3.0"
embedded-dma = "0.2.0"
embedded-alloc = "0.5.0"



# this lets you use `cargo fix`!
[[bin]]
name = "relay-controllers-hub"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

