[package]
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"
name = "board"
version = "0.1.0"

# makes `cargo check --all-targets` (used by Rust-Analyzer) work
[lib]
bench = false
doctest = false
test = false

[dependencies]
cortex-m = "0.7.7"
defmt = "0.3.5"
logic = { path = "../../logic" }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
nb = "1.1.0"
stm32f4xx-hal = { version = "0.16.0", features = ["rt", "stm32f411"], path = "../../../stm32f4xx-hal" }
cortex-m-rtic = "1.0.0"
rtt-target = { version = "0.4.0" }
dwt-systick-monotonic = "1.1.0"
time = { version = "0.3.22", default-features = false }
time-core = "0.1.1"
embedded-storage = "0.3.0"
embedded-dma = "0.2.0"
embedded-alloc = "0.5.0"

[features]
# these features are required by defmt
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []
